# nemo

./: .gitmodules  README.md  arcelik_3cooridor_ko.pgm  frame.gv
articubot_interfaces/: CMakeLists.txt  package.xml
articubot_interfaces/srv/: FollowCooridor.srv
articubot_one/: CMakeLists.txt  README.md  package.xml
articubot_one/articubot_one/scripts/: way_points.py  way_points_web.py  waypoints_commander.py
articubot_one/config/: ekf.yaml  ekf_dev.yaml  keepout.yaml  laser_filter.yaml  laser_filter_front.yaml  laser_filter_front_nav.yaml  laser_filter_rear.yaml  laser_filter_rear_nav.yaml  main.rviz  map_server_params.yaml  mapper_params_2laser.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_localization.yaml  nav2_params-smac2d-dwb-dev.yaml  nav2_params-smac2d-dwb.yaml  nav2_params-smac2d-rpp.yaml  nav2_params-smachybrid-dwb.yaml  nav2_params.yaml  nav2_params_dev.yaml  nav2_params_navfn-dwb.yaml  nav2_params_straight-dwb.yaml  nav2_params_theta_dwb.yaml  turtle_nav.yaml
articubot_one/config/maps/: astec.data  astec.pgm  astec.yaml  dust2.data  dust2.pgm  dust2.yaml  inferno.data  inferno.pgm  inferno.yaml  italy.data  italy.pgm  italy.yaml  map_1688368041.pgm  map_1688368041.yaml  milita.data  milita.pgm  milita.yaml  ofis.data  ofis.pgm  ofis.yaml  output.json
articubot_one/description/: face.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
articubot_one/launch/: ekf.launch.py  gazebo.launch.py  launch_all.launch.py  launch_all_launch.py  launch_all_localize.launch.py  launch_all_sim.launch.py  launch_sim.launch.py  nav2_localization.launch.py  navigation_launch.py  online_async_2lasers.launch.py  online_async_launch.py  rplidar.launch.py  scan_filter.launch.py  scan_filter_nav.launch.py
articubot_one/map/: 40cm_w_box.data  40cm_w_box.pgm  40cm_w_box.yaml  60cm_test_env.data  60cm_test_env.pgm  60cm_test_env.yaml  60cm_w_obstacle.data  60cm_w_obstacle.pgm  60cm_w_obstacle.yaml  arcelik.data  arcelik.pgm  arcelik.yaml  arcelik2.data  arcelik2.pgm  arcelik2.yaml  arcelik3.data  arcelik3.pgm  arcelik3.yaml  arcelik_2cooridor.data  arcelik_2cooridor.pgm  arcelik_2cooridor.yaml  arcelik_3cooridor.data  arcelik_3cooridor.yaml  arcelik_3cooridor_backup.pgm  arcelik_cooridor2.data  arcelik_cooridor2.pgm  arcelik_cooridor2.yaml  arcelik_sim_map.data  arcelik_sim_map.pgm  arcelik_sim_map.yaml  arcelik_sim_map2.data  arcelik_sim_map2.pgm  arcelik_sim_map2.yaml  barcode_40cm.data  barcode_40cm.pgm  barcode_40cm.yaml  barcode_45cm.data  barcode_45cm.pgm  barcode_45cm.yaml  huge.yaml  (+22 more)
articubot_one/map/huge_new/: huge_new.yaml
articubot_one/scripts/: align_imu.py  barcode_reader.py  frame.gv  move_robot_forward.py  pose_pub.py  repub_map.py  way_points.py  way_points_web.py  waypoints_follower.py
articubot_one/src/: calculate_path.cpp  calculate_path_dev_reverse.cpp  follow_cooridor_srv.cpp  get_laser_range.cpp  realsense_coordinate_converter copy.cpp  realsense_coordinate_converter.cpp  set_lidar_freq.py
articubot_one/worlds/: 1mbox.STL  40cm_corridor.world  40cm_w_box  60cm_corridor.world  60cm_w_box.world  60cm_w_obstacles.world  Pallet_80x80_mikius.stl  UBERFACTORY.STL  UBERFACTORY_quarter.STL  UBERFACTORY_quarter2.STL  arcelik  last.world  turtle.world  uber.sdf  uber.world  uberfactory.world
articubot_one/worlds/Untitled/: model.sdf
diffdrive_arduino/: .gitignore
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp  fake_robot.cpp
ira_laser_tools/config/: laserscan_merge.yaml  laserscan_merge_filtered.yaml
ira_laser_tools/launch/: merge_multi.launch.py  merge_multi_filtered.launch.py
ira_laser_tools/src/: laserscan_multi_merger.cpp
nav2_costmap_filters_demo/launch/: costmap_filter_info.launch.py
nav2_costmap_filters_demo/maps/: 60cm_test_env_kof.pgm  keepout_mask.yaml  keepout_mask_40cm.yaml  speed_mask.yaml
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch.py
(+20 files in other folders)
